[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kromaplus"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.8"
authors = [
  { name = "Lam Nguyen", email = "lamng3.work@gmail.com" }
]
license = { text = "MIT" }

# list runtime dependencies here
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
